--- a/infrastructure/dto/build.gradle
+++ b/infrastructure/dto/build.gradle
@@ -1,3 +1,11 @@
+apply plugin: 'java'
+
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
+}
+
+test {
+    useJUnitPlatform()
 }
