--- a/settings.gradle
+++ b/settings.gradle
@@ -28,4 +28,4 @@ include ':r2dbc-postgresql'
 project(':r2dbc-postgresql').projectDir = file('./infrastructure/driven-adapters/r2dbc-postgresql')
 
 include ':dto'
-project(':dto').projectDir = file('./infrastructure/dto')
+project(':dto').projectDir = file('./domain/dto')
