--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -2,10 +2,17 @@ dependencies {
     implementation project(':usecase')
     implementation project(':model')
     implementation project(':dto')
+
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation project(':exception')
+    implementation 'org.springframework.security:spring-security-config'
+    implementation 'org.springframework.security:spring-security-web'
 
-    // 👇 Swagger/OpenAPI para WebFlux funcional
+    implementation project(':r2dbc-postgresql')
+
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.10'
 }
+
