--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -36,4 +36,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run unit tests
-        run: ./gradlew clean test --no-daemon --stacktrace
+        run: ./gradlew clean test --no-daemon --stacktrace --info --console=plain
