--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -36,4 +36,5 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run unit tests
-        run: ./gradlew clean test --no-daemon --stacktrace --failures
+        run: ./gradlew clean test --no-daemon --stacktrace --console=plain
+
