--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dto-test-report
-          path: domain/dto/build/reports/tests/test/
+          path: domain/dto/build/reports/tests/test/**
