implement protected endpoint

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -46,6 +46,7 @@ routes:
     register: /api/v1/usuarios
     login: /api/v1/login
     logout: /api/v1/logout
+    session: /api/v1/session
 
 adapters:
   restconsumer:
