--- a/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
@@ -16,6 +16,6 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
-
+    implementation 'org.springframework:spring-webflux'
 }
 
