--- a/domain/dto/build.gradle
+++ b/domain/dto/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'java'
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-
+    testImplementation platform('org.junit:junit-bom:5.12.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 }
 
 test {
