--- a/infrastructure/entry-points/reactive-web/src/test/resources/application.yaml
+++ b/infrastructure/entry-points/reactive-web/src/test/resources/application.yaml
@@ -1,4 +1,4 @@
 routes:
   paths:
-    tasks: "/api/v1/tasks"
-    tasksById: "/api/v1/tasks/{id}"
+    usuarios: "/api/v1/usuarios"
+    usuariosById: "/api/v1/usuarios/{id}"
