--- a/.gitignore
+++ b/.gitignore
@@ -328,6 +328,9 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+# Otros archivos y carpetas
+.env
+
 # End of https://www.gitignore.io/api/java,linux,macos,sonar,gradle,windows,eclipse,sonarqube,sublimetext,intellij+all,visualstudiocode
 
 # HPROF
