--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+	testImplementation 'com.tngtech.archunit:archunit:1.4.1'
 	implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 	implementation project(':r2dbc-postgresql')
 	implementation project(':reactive-web')
@@ -9,8 +11,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
-    testImplementation 'com.tngtech.archunit:archunit:1.4.1'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation platform('org.junit:junit-bom:5.12.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-api:2.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
