--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,12 @@ sonar {
 }
 
 apply from: './main.gradle'
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
+}
+
+test {
+    useJUnitPlatform()
+}
