--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,12 @@
+# Usa una imagen ligera con JDK 21
 FROM eclipse-temurin:21-jdk-alpine
+
 VOLUME /tmp
-COPY *.jar JavaReactivo.jar
-ENV JAVA_OPTS=" -Xshareclasses:name=cacheapp,cacheDir=/cache,nonfatal -XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
-# Replace with a non-root user to avoid running the container with excessive privileges
-USER appuser
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS  -jar JavaReactivo.jar" ]
+
+# Copia el JAR ejecutable del proyecto de usuarios
+COPY applications/app-service/build/libs/JavaReactivo.jar app.jar
+
+ENV JAVA_OPTS=" -XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
+
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+EXPOSE 8080
