--- a/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
@@ -17,5 +17,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
     implementation 'org.springframework:spring-webflux'
+    testImplementation platform('org.junit:junit-bom:5.12.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
 }
 
+test {
+    useJUnitPlatform()
+}
