--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -15,5 +15,11 @@ dependencies {
     implementation "org.reactivecommons.utils:object-mapper:0.1.0"
 
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.10'
+    testImplementation platform('org.junit:junit-bom:5.12.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
 }
 
+test {
+    useJUnitPlatform()
+}
