--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -33,3 +33,18 @@ bootJar {
     // Sets output jar name
     archiveFileName = "${project.getParent().getName()}.${archiveExtension.get()}"
 }
+tasks.named('bootRun') {
+    doFirst {
+        def envFile = file("${rootDir}/.env")
+        if (envFile.exists()) {
+            envFile.readLines().each { line ->
+                if (line && !line.startsWith("#")) {
+                    def parts = line.split("=", 2)
+                    if (parts.length == 2) {
+                        environment parts[0], parts[1]
+                    }
+                }
+            }
+        }
+    }
+}
