--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -5,12 +5,11 @@ spring:
   application:
     name: "JavaReactivo"
   r2dbc:
-    url: r2dbc:postgresql://ep-rough-fire-aecwdwd0-pooler.c-2.us-east-2.aws.neon.tech:5432/neondb?sslmode=require
-    username: neondb_owner
-    password: npg_H6Yrtqn2Shbm
+    url: ${SPRING_R2DBC_URL}
+    username: ${SPRING_R2DBC_USERNAME}
+    password: ${SPRING_R2DBC_PASSWORD}
     properties:
       sslMode: require
-
   sql:
     init:
       platform: postgres
@@ -54,12 +53,12 @@ adapters:
     timeout: 5000
     url: http://localhost:8080
   r2dbc:
-    host: ep-rough-fire-aecwdwd0-pooler.c-2.us-east-2.aws.neon.tech
-    port: 5432
-    database: neondb
+    host: ${R2DBC_HOST}
+    port: ${R2DBC_PORT}
+    database: ${R2DBC_DATABASE}
     schema: public
-    username: neondb_owner
-    password: npg_H6Yrtqn2Shbm
+    username: ${SPRING_R2DBC_USERNAME}
+    password: ${SPRING_R2DBC_PASSWORD}
     options: sslmode=require
 
 springdoc:
