--- a/domain/dto/build.gradle
+++ b/domain/dto/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     testImplementation 'org.junit.platform:junit-platform-launcher'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    implementation 'jakarta.el:jakarta.el-api:5.0.1'
+    implementation 'org.glassfish.expressly:expressly:5.0.0'
 }
 
 test {
