--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation platform('org.junit:junit-bom:5.12.2')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.12.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-api:2.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
