--- a/main.gradle
+++ b/main.gradle
@@ -33,8 +33,8 @@ subprojects {
 
         testImplementation 'io.projectreactor.tools:blockhound-junit-platform:1.0.13.RELEASE'
         testImplementation 'io.projectreactor:reactor-test'
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+        testImplementation 'org.junit.platform:junit-platform-launcher:1.12.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor  "org.projectlombok:lombok:${lombokVersion}"
